# sg

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
contracts/genes/: bond_create.sg  bridge_create.sg  bridge_stp.sg  bridge_uplink.sg  check_bond_state.sg  check_connectivity.sg  (+4 more)
demo/: federation_demo.py  live_mutation.py  live_mutation_production.py  production_run.py
docs/: CONTRACT-GUIDE.md  HANDBOOK.md  PLUGIN-GUIDE.md  SOFTWARE-GENOMICS.md
fixtures/: bond_create_fix.py  bridge_create_fix.py  bridge_stp_fix.py  check_connectivity_fix.py  mac_preserve_fix.py
genes/: bond_create_v1.py  bridge_create_v1.py  bridge_stp_v1.py  bridge_uplink_v1.py  check_bond_state_v1.py  check_fdb_stability_v1.py  check_link_state_v1.py  vlan_create_v1.py
plugins/data/: pyproject.toml
plugins/data/contracts/genes/: check_nulls.sg  check_row_count.sg  clean_records.sg  ingest_csv_to_table.sg  transform_records.sg  validate_schema.sg
plugins/data/contracts/pathways/: ingest_and_validate.sg  ingest_clean_and_load.sg
plugins/data/contracts/pipelines/: ingest_airtravel.sg  ingest_cities.sg
plugins/data/fixtures/: check_nulls_fix.py  check_row_count_fix.py  clean_records_fix.py  ingest_csv_to_table_fix.py  transform_records_fix.py  validate_schema_fix.py
plugins/data/genes/: check_nulls_v1.py  check_row_count_v1.py  clean_records_v1.py  ingest_csv_to_table_v1.py  transform_records_v1.py  validate_schema_v1.py
plugins/data/sg_data/: __init__.py  kernel.py  mock.py  production.py
plugins/network/: pyproject.toml
plugins/network/contracts/genes/: bond_create.sg  bridge_create.sg  bridge_stp.sg  bridge_uplink.sg  check_link_state.sg
plugins/network/contracts/pathways/: configure_bridge_with_stp.sg  provision_management_bridge.sg  remediate_mac_flapping.sg
plugins/network/contracts/topologies/: production_server.sg
plugins/network/fixtures/: bridge_create_fix.py  bridge_uplink_fix.py  check_fdb_stability_fix.py  check_mac_stability_fix.py  configure_bridge_with_stp_fused.py  generated_contract.sg  health_check_bridge_fused.py  provision_management_bridge_fused.py  vlan_create_fix.py
plugins/network/genes/: bridge_create_v1.py  check_connectivity_v1.py  check_mac_stability_v1.py  mac_preserve_v1.py
plugins/network/sg_network/: __init__.py  kernel.py  mock.py  production.py
sg/: __init__.py  __main__.py  adaptation.py  arena.py  audit.py  cli.py  conformance.py  contract_evolution.py  contracts.py  daemon.py  dashboard.py  decomposition.py  diff.py  events.py  failure_discovery.py  federation.py  filelock.py  fitness.py  fusion.py  interactions.py  loader.py  locus_discovery.py  log.py  meta_params.py  metrics.py  mutation.py  mutation_cache.py  orchestrator.py  pathway.py  pathway_arena.py  pathway_fitness.py  pathway_mutation.py  pathway_registry.py  phenotype.py  pipeline.py  pool.py  pool_server.py  probe.py  registry.py  regression.py  (+11 more)
tests/: test_adaptation.py  test_arena.py  test_audit.py  test_cli_data_pipeline.py  test_cmd_kernels.py  test_conformance.py  test_connects.py  test_contract_compat.py  test_contract_evolution.py  test_contracts.py  test_cross_domain.py  test_daemon.py  test_dashboard.py  test_data_e2e.py  test_decomposition.py  test_diff.py  test_discovery.py  test_distributed_fitness.py  test_e2e.py  test_e2e_mac_flapping.py  test_error_containment.py  test_events.py  test_evolutionary_mechanisms.py  test_failure_discovery.py  test_federation.py  test_filelock.py  test_fitness.py  test_fitness_context.py  test_fusion.py  test_generate.py  test_integration_scenarios.py  test_interactions.py  test_kernel.py  test_kernel_selection.py  test_lineage_compete.py  test_live_mutation.py  test_loader.py  test_locus_discovery.py  test_logging.py  test_meta_params.py  (+41 more)
(+16 files in other folders)
