[project]
name = "software-genomics"
version = "0.2.0"
description = "Software Genomics — evolutionary software runtime"
requires-python = ">=3.9"
license = {text = "BSD-2-Clause"}
dependencies = [
    "tomli>=2.0; python_version<'3.11'",
    "tomli_w>=1.0",
]

[project.optional-dependencies]
dashboard = ["fastapi>=0.100", "uvicorn[standard]>=0.20"]
claude = ["httpx>=0.27"]
openai = ["httpx>=0.27"]
deepseek = ["httpx>=0.27"]
federation = ["httpx>=0.27"]
all = ["software-genomics[dashboard,claude,openai,deepseek,federation]"]
dev = ["pytest>=8.0"]

[project.scripts]
sg = "sg.cli:main"

[project.entry-points."sg.kernels"]
stub = "sg.kernel.stub:StubKernel"
mock = "sg.kernel.mock:MockNetworkKernel"
network-mock = "sg.kernel.mock:MockNetworkKernel"
production = "sg.kernel.production:ProductionNetworkKernel"
network-production = "sg.kernel.production:ProductionNetworkKernel"

[project.urls]
Repository = "https://github.com/EsteSystems/sg"

[tool.setuptools.packages.find]
include = ["sg*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
