[project]
name = "sg-network"
version = "0.2.0"
description = "Software Genomics — network domain plugin"
requires-python = ">=3.9"
license = {text = "BSD-2-Clause"}
dependencies = [
    "software-genomics>=0.2.0",
]

[project.entry-points."sg.kernels"]
mock = "sg_network.mock:MockNetworkKernel"
network-mock = "sg_network.mock:MockNetworkKernel"
production = "sg_network.production:ProductionNetworkKernel"
network-production = "sg_network.production:ProductionNetworkKernel"

[tool.setuptools.packages.find]
include = ["sg_network*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
